# revenue

./: .gitignore  _sitemap.html  app-blueprint.md  docker-compose.yml  explore.html  index.html
.agents/: AGENTS.md
_expo/static/js/web/: entry-b77c34d983914e2f3fb17465d595c54c.js  entry-c27468c08aae844cec4e1a2361990a00.js
backend/: package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: index.ts
backend/src/lib/: firebaseAdmin.ts
backend/src/routes/: auth.ts
backend/src/services/: adapters.ts  crypto.ts
backend/src/workers/: syncWorker.ts
frontend/: app.json  package-lock.json  package.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src/app/: +html.tsx  _layout.tsx  index.tsx  login.tsx  pricing.tsx  two-factor-setup.tsx
frontend/src/components/: DateRangeSelector.tsx  MetricCard.tsx  RevenueBreakdownTable.tsx  RevenueChart.tsx  SubscriptionGate.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useRevenueData.ts
frontend/src/lib/: AdMobManager.native.ts  AdMobManager.web.ts  firebase.ts  taxCalculator.ts
frontend/src/store/: useDashboardStore.ts
